Fix Layout Issues.

--- a/css/index.scss
+++ b/css/index.scss
@@ -213,7 +213,7 @@ $z-index-drawer: 999;
 
       @media screen and (min-width: 768px) {
         margin: 0;
-        padding: 1rem 1rem;
+        padding: 1rem 0.5rem;
       }
     }
 
@@ -377,6 +377,10 @@ $z-index-drawer: 999;
       @media screen and (min-width: 768px) {
         width: 14ch;
       }
+    }
+
+    .block__subtitle {
+      text-align: start;
     }
 
     .btn {
@@ -605,7 +609,10 @@ $z-index-drawer: 999;
   }
 
   .section {
-    padding: 4rem 2rem;
+    padding: 2rem 1rem;
+    @media screen and (min-width: 768px) {
+      padding: 4rem 2rem;
+    }
   }
 
   &__heading {
@@ -615,6 +622,10 @@ $z-index-drawer: 999;
 
   &__description {
     color: #e0e0e0;
+  }
+
+  &__form {
+    max-width: 100%;
   }
 
   .form-control {
